--- a/tasks/rabbitmq_plugins.yml
+++ b/tasks/rabbitmq_plugins.yml
@@ -1,7 +1,34 @@
 ---
-- name: rabbitmq_plugins | installing plugin(s)
-  rabbitmq_plugin:
-    name: "{{ rabbitmq_plugins }}"
+- name: create plugin directory
+  file:
+    path: "{{ rabbitmq_plugin_dir }}"
+    owner: "root"
+    group: "root"
+    mode: "0750"
+    state: directory
   become: true
-  when: rabbitmq_plugins
-  notify: restart rabbitmq-server
+
+- name: download plugins
+  get_url:
+    url: "{{ item.url }}"
+    dest: "{{ rabbitmq_plugin_dir }}"
+    mode: "0640"
+  become: true
+  with_items: "{{ rabbitmq_plugins }}"
+  when: not item.extract | default(True) | bool
+
+- name: download and extract plugins
+  unarchive:
+    src: "{{ item.url }}"
+    dest: "{{ rabbitmq_plugin_dir }}"
+    mode: "0640"
+  become: true
+  with_items: "{{ rabbitmq_plugins }}"
+  when: item.extract | default(True) | bool
+
+- name: enable rabbitmq plugins
+  rabbitmq_plugin:
+    names: "{{ item.name }}"
+    state: enabled
+  become: true
+  with_items: "{{ rabbitmq_plugins }}"
