--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,21 @@
 ---
 # vars file for ansible-rabbitmq
+
+rabbitmq_erlang_packages:
+- erlang-base
+- erlang-asn1
+- erlang-crypto
+- erlang-eldap
+- erlang-ftp
+- erlang-inets
+- erlang-mnesia
+- erlang-os-mon
+- erlang-parsetools
+- erlang-public-key
+- erlang-runtime-tools
+- erlang-snmp
+- erlang-ssl
+- erlang-syntax-tools
+- erlang-tftp
+- erlang-tools
+- erlang-xmerl
